<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegestationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/tvTitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/margin_title_app"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_title_app"
        android:textColor="@color/tcolorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_subtitle_sign_up"
        android:textColor="@color/tcolorPrimaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintStart_toStartOf="@+id/tvTitleApp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleApp" />


    <LinearLayout
        android:id="@+id/registerid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleSignUp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:background="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailregistesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:background="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:background="#FFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:text="@string/text_privacy_policy"
        android:textColor="@color/tcolorPrimaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerid" />

    <Button
        android:id="@+id/cirRegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/margin_btn"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_btn_sign_up"
        android:textColor="@color/tcolorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPrivacyPolicy" />

    <TextView
        android:id="@+id/alredyResistetionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_to_sign_in"
        android:textColor="@color/tcolorPrimaryText"
        android:textSize="@dimen/text_caption_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>