<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".LoginActivity"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/tvTitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/margin_title_app"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_title_app"
        android:textColor="@color/tcolorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_subtitle_sign_in"
        android:textColor="@color/tcolorPrimaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintStart_toStartOf="@+id/tvTitleApp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleApp" />


    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:errorEnabled="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleApp"
        tools:layout_editor_absoluteX="24dp">

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="12dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--  Password Label -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="12dp"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgetPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginTop="@dimen/margin_input_layout"
        android:layout_marginEnd="@dimen/margin_layout"
        android:orientation="vertical"
        android:visibility="gone"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleSignIn">

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="12dp"
            android:background="#FFF"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetPassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgetPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text=" পাসওয়ার্ড লিঙ্ক পাঠান" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_btn_forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="@+id/loginLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginLayout" />

    <Button
        android:id="@+id/btnFirebaseSignIn"
        android:layout_width="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_btn_sign_in"
        android:textColor="@color/tcolorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_or"
        android:textColor="@color/tcolorSecondaryText"
        android:textSize="@dimen/text_caption_size"
        app:layout_constraintEnd_toEndOf="@+id/btnFirebaseSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnFirebaseSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnFirebaseSignIn" />

    <View
        android:id="@+id/vStrokeLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@color/tcolorDivide"
        app:layout_constraintBottom_toBottomOf="@+id/tvOR"
        app:layout_constraintEnd_toStartOf="@id/tvOR"
        app:layout_constraintStart_toStartOf="@+id/btnFirebaseSignIn"
        app:layout_constraintTop_toTopOf="@+id/tvOR" />

    <View
        android:id="@+id/vStrokeRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:background="@color/tcolorDivide"
        app:layout_constraintBottom_toBottomOf="@+id/tvOR"
        app:layout_constraintEnd_toEndOf="@id/btnFirebaseSignIn"
        app:layout_constraintStart_toEndOf="@+id/tvOR"
        app:layout_constraintTop_toTopOf="@+id/tvOR" />

    <LinearLayout
        android:id="@+id/googleid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvOR">

        <com.google.android.gms.common.SignInButton

            android:visibility="gone"
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_to_sign_up"
        android:textColor="@color/tcolorPrimaryText"
        android:textSize="@dimen/text_caption_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleid" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>